Added a text view and redirecting stdout to it

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 *.xcuserstate
+
+GtestSuite.xcodeproj/xcuserdata/gannons.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+GtestSuite.xcodeproj/xcuserdata/gannons.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
