Automatically scroll to the bottom of the text view

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 GtestSuite.xcodeproj/xcuserdata/gannons.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 
 GtestSuite.xcodeproj/xcuserdata/gannons.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+GtestSuite.xcodeproj/project.xcworkspace/xcuserdata/gannons.xcuserdatad/UserInterfaceState.xcuserstate
